# Labo2.2024

./: README.md  augment_resnet50_train.ipynb  pyproject.toml  resnet50_predict.ipynb
tutoriales/: 03_DataWrangling.ipynb  03_Petfinder_EDA.ipynb  06_tp-final.ipynb
