[tool.poetry]
name = "exp-tomi"
version = "0.1.0"
description = ""
authors = ["tlanza <tlanza@itba.edu.ar>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas="^2.2.1"
torch = "^1.13.1"
torchvision = "0.14.1"
opencv-python = "^4.9.0.80"
tqdm = "^4.66.2"
matplotlib = "^3.8.3"
scikit-learn = "^1.4.1.post1"
seaborn = "^0.13.2"
transformers = "^4.38.2"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
